# ja2-rust

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  JA2.sln  Makefile  README.md  TODO.txt  build.bat  format-modified.bat  launch.bat  test-and-launch.bat  test-on-windows.bat  test.bat  win-format-all.sh  win-format-modified.sh  xx.py
.github/workflows/: build.yml  msbuild.yml
bin-linux/: main.c
bin-win32/: CMakeLists.txt  JA2.vcxproj  JA2.vcxproj.filters  main_win.c
docs/: cross-platform-notes.md
ja2/: .gitignore  JA2.sln
ja2/tester/: bugfixes.cpp  tester.vcxproj  tester.vcxproj.filters
ja2/win32/: Input_win.c  JA2.vcxproj  JA2.vcxproj.filters  RAD.h  Smack.h  SoundMan_win.c  Video_win.c
ja2lib/: AniViewScreen.c  BuildDefines.h  BuildInfo.h  CMakeLists.txt  CharList.c  CharList.h  Cheats.h  Credits.c  Credits.h  FadeScreen.c  FadeScreen.h  GameInitOptionsScreen.c  GameInitOptionsScreen.h  GameLoop.c  GameLoop.h  GameScreen.c  GameScreen.h  GameSettings.c  GameSettings.h  GameVersion.c  GameVersion.h  Globals.h  HelpScreen.c  HelpScreen.h  HelpScreenText.h  Init.c  Init.h  Intro.c  Intro.h  JA2.h  JA2Splash.c  JA2Splash.h  JAScreens.c  JAScreens.h  LanguageDefines.h  LeanTypes.h  LoadingScreen.c  LoadingScreen.h  Local.h  MainMenuScreen.c  (+43 more)
ja2lib/Editor/: CursorModes.c  CursorModes.h  EditScreen.c  EditScreen.h  EditSys.c  EditSys.h  EditorBuildings.c  EditorBuildings.h  EditorCallbackPrototypes.h  EditorCallbacks.c  EditorDefines.h  EditorItems.c  EditorItems.h  EditorMapInfo.c  EditorMapInfo.h  EditorMercs.c  EditorMercs.h  EditorModes.c  EditorModes.h  EditorTaskbarCreation.c  EditorTaskbarCreation.h  EditorTaskbarUtils.c  EditorTaskbarUtils.h  EditorTerrain.c  EditorTerrain.h  EditorUndo.c  EditorUndo.h  ItemStatistics.c  ItemStatistics.h  LoadScreen.c  LoadScreen.h  LoadScreenPub.h  MessageBox.c  MessageBox.h  NewSmooth.c  NewSmooth.h  PopupMenu.c  PopupMenu.h  RoadSmoothing.c  RoadSmoothing.h  (+11 more)
ja2lib/Laptop/: AIM.c  AIM.h  AIMArchives.c  AIMArchives.h  AIMFacialIndex.c  AIMFacialIndex.h  AIMHistory.c  AIMHistory.h  AIMLinks.h  AIMMembers.h  AIMPolicies.c  AIMPolicies.h  AIMSort.c  AIMSort.h  AimLinks.c  AimMembers.c  BobbyR.c  BobbyR.h  BobbyRAmmo.c  BobbyRAmmo.h  BobbyRArmour.c  BobbyRArmour.h  BobbyRGuns.c  BobbyRGuns.h  BobbyRMailOrder.c  BobbyRMailOrder.h  BobbyRMisc.c  BobbyRMisc.h  BobbyRShipments.c  BobbyRShipments.h  BobbyRUsed.c  BobbyRUsed.h  BrokenLink.c  BrokenLink.h  CharProfile.c  CharProfile.h  Email.c  Email.h  Files.c  Files.h  (+74 more)
ja2lib/SGP/: Bitmap.h  ButtonSoundControl.c  ButtonSoundControl.h  ButtonSystem.c  ButtonSystem.h  Container.c  Container.h  CursorControl.c  CursorControl.h  CursorFileData.h  Debug.c  Debug.h  English.c  English.h  FileMan.c  FileMan.h  Font.c  Font.h  HImage.c  HImage.h  ImgFmt.h  ImpTGA.c  ImpTGA.h  Input.h  Ja2Libs.c  Ja2Libs.h  LibraryDataBase.c  LibraryDataBase.h  LibraryDataBasePub.h  Line.c  Line.h  MemMan.c  MemMan.h  MouseSystem.c  MouseSystem.h  MouseSystemMacros.h  PCX.c  PCX.h  PaletteEntry.h  Random.c  (+25 more)
ja2lib/Strategic/: AIViewer.c  Assignments.c  Assignments.h  AutoResolve.c  AutoResolve.h  CampaignInit.c  CampaignInit.h  CampaignTypes.h  CreatureSpreading.c  CreatureSpreading.h  GameClock.c  GameClock.h  GameEventHook.c  GameEventHook.h  GameEvents.c  GameEvents.h  GameInit.c  GameInit.h  HourlyUpdate.c  MapScreen.c  MapScreen.h  MapScreenHelicopter.c  MapScreenHelicopter.h  MapScreenInterface.c  MapScreenInterface.h  MapScreenInterfaceBorder.c  MapScreenInterfaceBorder.h  MapScreenInterfaceBottom.c  MapScreenInterfaceBottom.h  MapScreenInterfaceMap.c  MapScreenInterfaceMap.h  MapScreenInterfaceMapInventory.c  MapScreenInterfaceMapInventory.h  MapScreenInterfaceTownMineInfo.c  MapScreenInterfaceTownMineInfo.h  Meanwhile.c  Meanwhile.h  MercContract.c  MercContract.h  PlayerCommand.c  (+40 more)
ja2lib/Tactical/: ActionItems.h  AirRaid.c  AirRaid.h  AnimationCache.c  AnimationCache.h  AnimationControl.c  AnimationControl.h  AnimationData.c  AnimationData.h  ArmsDealerInit.c  ArmsDealerInit.h  ArmsDealerInvInit.c  ArmsDealerInvInit.h  AutoBandage.c  AutoBandage.h  Boxing.c  Boxing.h  Bullets.c  Bullets.h  Campaign.c  Campaign.h  CivQuotes.c  CivQuotes.h  DialogueControl.c  DialogueControl.h  DisplayCover.c  DisplayCover.h  DrugsAndAlcohol.c  DrugsAndAlcohol.h  EndGame.c  EndGame.h  EnemySoldierSave.c  FOV.c  FOV.h  (+107 more)
platform-dummy/: CMakeLists.txt  dummy-platform.c  platform-dummy.vcxproj  platform-dummy.vcxproj.filters
platform-linux/: CMakeLists.txt  platform-linux-stubs.c  platform-linux.c  platform_linux_io.c
platform-win32/: CMakeLists.txt  Input_win.c  Mss.h  RAD.h  Smack.h  SoundMan_win.c  TimerControl_win.c  Video_win.c  platform-win32.vcxproj  platform-win32.vcxproj.filters  platform_win.c  platform_win.h  platform_win_io.c
rustlib/: .gitignore  Cargo.toml  Makefile  README.md  build.bat  build.rs  cbindgen.toml  generate_single_file.bat  generate_single_file.sh  rust_platform.h  rust_sam_sites.h  rust_sector.h  rustlib.h
rustlib/include/: rust_alloc.h  rust_civ_groups.h  rust_clock.h  rust_clock_ext.h  rust_cmdline.h  rust_colors.h  rust_debug.h  rust_fileman.h  rust_game_state.h  rust_geometry.h  rust_images.h  rust_laptop.h  rust_militia.h  rust_platform.h  rust_sam_sites.h  rust_screenshot.h  rust_sector.h  rust_towns.h  rust_ui.h
rustlib/src/: binreader.rs  civ_groups.rs  clock.rs  colors.rs  exp_alloc.rs  exp_civ_groups.rs  exp_clock.rs  exp_cmdline.rs  exp_colors.rs  exp_debug.rs  exp_fileman.rs  exp_game_state.rs  exp_geometry.rs  exp_images.rs  exp_laptop.rs  exp_militia.rs  exp_platform.rs  exp_sam_sites.rs  exp_screenshot.rs  exp_sector.rs  exp_towns.rs  exp_ui.rs  finances.rs  images.rs  laptop.rs  lib.rs  militia.rs  platform.rs  sam_sites.rs  sector.rs  slf.rs  slfdb.rs  state.rs  towns.rs  ui.rs
tester/: dummy-platform.c  test.cpp  tester.vcxproj
tools/: update_sources.py
unittester/: CMakeLists.txt  bugfixes.cpp  image-structures.cpp  rustlib-export.cpp  savegame-structures.cpp  unittester.vcxproj  unittester.vcxproj.filters
win32/: JA2.vcxproj  platform_win.h
(+151 files in other folders)
