[package]
name = "rustlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustlib"
crate-type = ["cdylib"]      # Creates dynamic lib

[build-dependencies]
cbindgen = { git = "https://github.com/gtrafimenkov/cbindgen-ggstd.git", branch="main" }

[dependencies]
ggstd = "0.0"
